--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.dayBtn {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  margin: 10px;
+}
+
+.dayBtn:hover {
+  background-color: thistle;
+  border-radius: 10px;
+}
+
+.taskBtn {
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  margin: 10px;
+}
+
+.taskBtn:hover {
+  background-color: turquoise;
+  border-radius: 10px;
 }
